force-app/main/default/objects/AOB_ProductAOContent__c/AOB_ProductAOContent__c.object-meta.xml
<CustomObject>
    <label>Product AO Content</label>
    <nameField>
        <label>Product AO Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product AO Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>