force-app/main/default/objects/AOB_ProductAOContent__c/fields/AOB_ContentType__c.field-meta.xml
<CustomField>
    <fullName>AOB_ContentType__c</fullName>
    <description>Type of the AO content (indicates where it should be displayed)</description>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NextActions</fullName>
                <label>What happens next?</label>
            </value>
            <value>
                <fullName>AppComplete</fullName>
                <label>Once your application is complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>