force-app/main/default/objects/AOB_ProductAOContent__c/fields/AOB_description__c.field-meta.xml
<CustomField>
    <fullName>AOB_description__c</fullName>
    <description>description of the content ( what to display for customer)</description>
    <label>description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>