force-app/main/default/objects/AOB_ProductAOContent__c/fields/AOB_HelpText__c.field-meta.xml
<CustomField>
    <fullName>AOB_HelpText__c</fullName>
    <description>help text if applicable</description>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>