force-app/main/default/objects/AOB_ProductAOContent__c/fields/AOB_Product__c.field-meta.xml
<CustomField>
    <fullName>AOB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent product(show this content is customer selected this product)</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product AO Content</relationshipLabel>
    <relationshipName>Product_AO_Content</relationshipName>
    <type>Lookup</type>
</CustomField>