force-app/main/default/objects/AOB_ProductAOContent__c/fields/AOB_Sequence__c.field-meta.xml
<CustomField>
    <fullName>AOB_Sequence__c</fullName>
    <description>order of the content</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>