force-app/main/default/objects/AOB_ProductAOContent__c/fields/AOB_ShowIFBPID__c.field-meta.xml
<CustomField>
    <fullName>AOB_ShowIFBPID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show this content only if the customer has a bpid</description>
    <label>Show only for customers with BPID</label>
    <type>Checkbox</type>
</CustomField>