force-app/main/default/objects/AOB_ProductAOContent__c/fields/AOB_ShowIFNOBPID__c.field-meta.xml
<CustomField>
    <fullName>AOB_ShowIFNOBPID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show this content only if the customer doesn&apos;t have a bpid</description>
    <label>Show only for customers without BPID</label>
    <type>Checkbox</type>
</CustomField>